Changes from previous project

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "gl-matrix": "^3.4.3",
+    "gulp": "^4.0.2",
+    "gulp-gzip": "^1.4.2",
     "math-extended": "^2.1.1",
     "mathjs": "^10.1.0",
     "rxjs": "~7.4.0",
