--- a/angular.json
+++ b/angular.json
@@ -74,10 +74,10 @@
             },
             "development": {
               "buildOptimizer": false,
-              "optimization": true,
+              "optimization": false,
               "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
+              "sourceMap": false,
               "namedChunks": true,
               "outputHashing": "bundles",
               "allowedCommonJsDependencies": [
