--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.1",
+    "@angular/animations": "^14.0.0",
     "@angular/cdk": "^13.1.3",
-    "@angular/common": "~13.2.1",
-    "@angular/compiler": "~13.2.1",
-    "@angular/core": "~13.2.1",
-    "@angular/forms": "~13.2.1",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
     "@angular/material": "^13.1.3",
-    "@angular/platform-browser": "~13.2.1",
-    "@angular/platform-browser-dynamic": "~13.2.1",
-    "@angular/router": "~13.2.1",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "@google/model-viewer": "^1.10.1",
     "gl-matrix": "^3.4.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-gzip": "^1.4.2",
     "math-extended": "^2.1.1",
     "mathjs": "^10.1.0",
@@ -32,9 +32,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.1",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -44,6 +44,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "sort-json-array": "^0.1.7",
-    "typescript": "~4.5.2"
+    "typescript": "~4.7.2"
   }
 }
