--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "changeDetection": "OnPush",
+          "changeDetection": "Default",
           "displayBlock": true
         },
         "@schematics/angular:application": {
